样式配置，优化

--- a/ZYSideSlipFilter/Classes/View/TableViewCell/SideSlipAllCategoryTableViewCell.xib
+++ b/ZYSideSlipFilter/Classes/View/TableViewCell/SideSlipAllCategoryTableViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,28 +14,31 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <frame key="frameInset" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCk-AT-R0t">
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.89803921568627454" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="Kgv-E5-83z"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全部分类" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hS0-BR-W3q">
-                        <rect key="frame" x="10" y="14" width="52" height="15.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.11372549019607843" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_right" translatesAutoresizingMaskIntoConstraints="NO" id="C1Y-TL-TbQ">
-                        <rect key="frame" x="295.5" y="14.5" width="14.5" height="14.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="C1Y-TL-TbQ" secondAttribute="height" multiplier="1:1" id="RZf-SI-jLM"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="900" text="全部" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6F-Ef-oTT">
-                        <rect key="frame" x="269.5" y="14.5" width="24" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" red="0.5296475887298584" green="0.52963173389434814" blue="0.52964073419570923" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a17-ck-mpO">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <connections>
                             <action selector="clickBackgroundButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="RSz-AX-1N7"/>
                         </connections>
@@ -42,12 +46,15 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="t6F-Ef-oTT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="1aL-mV-E4l"/>
+                    <constraint firstItem="NCk-AT-R0t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="3e9-7p-CbT"/>
                     <constraint firstAttribute="bottomMargin" secondItem="hS0-BR-W3q" secondAttribute="bottom" constant="6" id="LIl-at-9u1"/>
                     <constraint firstAttribute="trailingMargin" secondItem="C1Y-TL-TbQ" secondAttribute="trailing" constant="2" id="Lax-6S-g6j"/>
+                    <constraint firstAttribute="trailing" secondItem="NCk-AT-R0t" secondAttribute="trailing" id="PCX-nH-Qio"/>
                     <constraint firstItem="hS0-BR-W3q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="PoD-bZ-hCk"/>
                     <constraint firstItem="C1Y-TL-TbQ" firstAttribute="height" secondItem="t6F-Ef-oTT" secondAttribute="height" id="XrM-Sa-D9T"/>
                     <constraint firstItem="C1Y-TL-TbQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aFJ-YY-UU3"/>
                     <constraint firstItem="C1Y-TL-TbQ" firstAttribute="leading" secondItem="t6F-Ef-oTT" secondAttribute="trailing" constant="2" id="eMY-ql-HtB"/>
+                    <constraint firstItem="NCk-AT-R0t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="itk-Ec-LL0"/>
                     <constraint firstItem="t6F-Ef-oTT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hS0-BR-W3q" secondAttribute="trailing" constant="15" id="jaJ-dP-yWE"/>
                     <constraint firstItem="hS0-BR-W3q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="tIc-4R-Tvh"/>
                 </constraints>
